public/stylesheets/less/config.less
.CodeMirror {
  height: 150px;
  cursor: text;
}

/* sortable */
.clearfix {
  &:before,
  &:after {
      content: " "; /* 1 */
      display: table; /* 2 */
  }
  
  &:after {
      clear: both;
  }
}

.pick-runner {
  .runner {
    float: left;
    width: 200px;
    height: 58px;
    border: 1px solid #ccc;
    margin: 10px;
    padding: 5px;
    background-color: #efefef;

    &.active {
      border-color: green;
      background-color: white;
    }
  }
}

.save-top-right {
  position: absolute;
  top: 0;
  right: 0;
}

.general-config {
  position: relative;

}

#ssh-keys {
  textarea {
    width: 100%;
    box-sizing: border-box;
    min-height: 150px;
  }
}

.config-tabs {
  li.disabled {
    font-style: italic;

    a {
      color: #bbb;
    }
  }
}

.branch-picker {
  select {
    margin-bottom: 0;
    margin-left: 10px;
  }
}

.tab-pane.plugin-tab {
  position: relative;
  
  .disabled-note {
    position: absolute;
    top: 0;
    right: 0;
    padding: 10px 10px 10px 13px;

    &.disabled {
      background-color: #ccc;
      border-radius: 10px;
    }

    button {
      margin-left: 5px;
    }
  }
}

.enabled-plugins,
.disabled-plugins {
  border: 1px solid #ccc;
  padding: 10px 20px 20px;
  margin: 10px;
  float: left;

  ul {
    min-width: 200px;
    min-height: 100px;
    margin: 5px 0 0 0;
    background-color: #eee;
    padding: 5px;
    li {
      &:first-child {
        margin-top: 0;
      }
    }
  }

  .drop-here {
    list-style: none;
    padding: 20px 10px;
    font-size: 1.5em;
    font-weight: bold;
    color: #aaa;
  }
}

.plugin-item {
  list-style: none;

  &.disabled {
    background-color: #ccc;
  }
  
  input {
    display: inline;
  }
  .rest {
    float: left;
  }
}

.pick-runner, .pick-plugins {
  .img {
    float: left;
    height: 48px;
    width: 48px;
    margin-right: 10px;
  }

  .title {
    font-size: 1.2em;
    font-weight: bold;
    line-height: 1.5em;
    display: block;
  }

}

.pick-runner {
  .runner {
    cursor: pointer;

    &.active {
      font-style: normal;
      color: black;
    }

    font-style: italic;
    color: #777;
  }
}

.plugin-item, .placeholder {
  padding: 2px;
  width: 200px;
  min-height: 48px;
  margin: 5px 0 0 0;
  border: 1px solid #aaa;
  background: white;
  cursor: pointer;
}

.placeholder {
  background: #fff;
}

/* done with sortable */

#project_config_collaborators {

  form {
    padding-top: 8px;
  }

  .collab-email {
    width: 200px;
    margin-bottom: 0;
  }
  
  .access-toggle {
    display: inline-block;
    margin-bottom: -11px;
  }
}

.clickable {
  cursor: pointer;
  &:hover {
    color: #777;
  }
}

#provider-config {
  border: 1px solid #ccc;
  border-radius: 5px;
  padding: 5px 10px 10px;
}

#config-wrapper {

  .config-tabs {
    margin: 5px 0 0;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
  }

  .tab-content {
  }
}

#project_config_collaborators {
  table {
    width: 100%;
    border-collapse: separate;
    border-spacing: 0 5px;
  }
  .no-collaborators {
    background-color: white;
    padding: 5px 10px;
    border-radius: 15px;
    font-weight: bold;
  }
  .collaborator {
    background-color: white;

    .image {
      padding: 0;
      img {
        height: 35px;
        width: 35px;
      }
    }

    .email {
      font-weight: bold;
      line-height: 18px;
    }

    .remove i {
      padding: 10px;
      &.icon-remove {
        color: red;
      }
    }

    td {
      line-height: 0;
    }

    > :first-child {
      border-top-left-radius: 15px;
      border-bottom-left-radius: 15px;
      padding-left: 10px;
    }

    > :last-child {
      border-top-right-radius: 15px;
      border-bottom-right-radius: 15px;
    }
  }
}

